--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -380,8 +380,8 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
 
                 <!-- Center Column -->
                 <div class="col-md-5 col-pad10">
-                    <div id="mywidget2-instance">
-                        <p class="sample" style="min-height:200px;">Widget 2 goes here</p>
+                    <div id="">
+                        <p class="sample" style="min-height:200px;">Lua Ed. goes here</p>
                     </div>
                 </div>
 
