Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/workspace.html
+++ b/workspace.html
@@ -87,7 +87,7 @@
 
                 <!-- Center Column -->
                 <div class="col-md-5 col-pad10">
-                    <div id="">
+                    <div id="com-chilipeppr-widget-luaeditor-instance">
                         <p class="sample" style="min-height:200px;">Lua Ed. goes here</p>
                     </div>
                 </div>
