--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -160,7 +160,9 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                 setTimeout(function() { $(window).trigger('resize'); }, 100);
             });
             
-            this.loadTemplateWidget();
+//            this.loadTemplateWidget();
+
+            this.loadLuaEditorWidget();
             
             // Create our workspace upper right corner triangle menu
             this.loadWorkspaceMenu();
@@ -228,6 +230,30 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                         }
                     );
                 }
+            );
+        },
+        /**
+         * Load the Lua Editor widget via chilipeppr.load()
+         */
+        loadLuaEditorWidget: function(callback) {
+
+            var that = this;
+
+            chilipeppr.load(
+              "#com-chilipeppr-widget-luaeditor-instance",
+              "http://raw.githubusercontent.com/chilipeppr/widget-luaeditor/master/auto-generated-widget.html",
+              function() {
+                // Callback after widget loaded into #myDivWidgetLuaeditor
+                // Now use require.js to get reference to instantiated widget
+                cprequire(
+                  ["inline:com-chilipeppr-widget-luaeditor"], // the id you gave your widget
+                  function(myObjWidgetLuaeditor) {
+                    // Callback that is passed reference to the newly loaded widget
+                    console.log("Widget / Lua Editor just got loaded.", myObjWidgetLuaeditor);
+                    myObjWidgetLuaeditor.init();
+                  }
+                );
+              }
             );
         },
         /**
@@ -380,7 +406,7 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
 
                 <!-- Center Column -->
                 <div class="col-md-5 col-pad10">
-                    <div id="">
+                    <div id="com-chilipeppr-widget-luaeditor-instance">
                         <p class="sample" style="min-height:200px;">Lua Ed. goes here</p>
                     </div>
                 </div>
