Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/workspace.html
+++ b/workspace.html
@@ -74,6 +74,12 @@
                     <div id="mywidget1-instance">
                         <p class="sample">Widget 1 goes here</p>
                     </div>
+
+                    
+                    <div id="net-mydomain-widget-currsens-instance">
+                        <p class="sample">CurrSens goes here</p>
+                    </div>
+
                     
                     <div id="com-chilipeppr-widget-template-instance">
                         <p class="sample">Template Widget goes here</p>
