Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -42,6 +42,7 @@
     margin-bottom:10px;
 }
 
+
 .billboard-content {
     padding: 6px 20px;
 }
@@ -304,7 +305,7 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                             isSingleSelectMode: true,
                             defaultBuffer: "marlin",
                             defaultBaud: 250000,
-                            bufferEncouragementMsg: 'For your device please choose the "default" buffer in the pulldown and a 115200 baud rate before connecting.'
+                            bufferEncouragementMsg: 'For your deviceee please choose the "default" buffer in the pulldown and a 115200 baud rate before connecting.'
                         });
                         //spjs.showBody();
                         //spjs.consoleToggle();
@@ -454,7 +455,7 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                     </div>
                     
                     <div id="mywidget3-instance">
-                        <p class="sample">Widget 3 goes here</p>
+                        <p class="sample">Widget 3 goes here...</p>
                     </div>
 
                 </div>
