--- a/workspace.html
+++ b/workspace.html
@@ -106,7 +106,7 @@
                     </div>
                     
                     <div id="mywidget3-instance">
-                        <p class="sample">Widget 3 goes here</p>
+                        <p class="sample">Widget 3 goes here...</p>
                     </div>
 
                 </div>
