Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/workspace.html
+++ b/workspace.html
@@ -101,6 +101,10 @@
                 <!-- Right Column -->
                 <div class="col-md-3 col-pad10">
                     
+                    <div id="axes-widget-instance">
+                        axes
+                    </div>
+                    
                     <div id="com-chilipeppr-widget-serialport-instance">
                         Widget 3 goes here
                     </div>
