Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -478,9 +478,9 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                     </div>
 
                     
-                    <div id="net-mydomain-widget-currsens-instance">
+                    <!--div id="net-mydomain-widget-currsens-instance">
                         <p class="sample">CurrSens goes here</p>
-                    </div>
+                    </div-->
 
                     
                     <div id="com-chilipeppr-widget-template-instance">
