--- a/workspace.html
+++ b/workspace.html
@@ -80,9 +80,9 @@
                     </div>
 
                     
-                    <div id="net-mydomain-widget-currsens-instance">
+                    <!--div id="net-mydomain-widget-currsens-instance">
                         <p class="sample">CurrSens goes here</p>
-                    </div>
+                    </div-->
 
                     
                     <div id="com-chilipeppr-widget-template-instance">
