Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/workspace.html
+++ b/workspace.html
@@ -84,6 +84,10 @@
                         <p class="sample">CurrSens goes here</p>
                     </div-->
 
+                    <div id="widget-gcode-instance">
+                        widget gcode
+                    </div>
+
                     
                     <div id="com-chilipeppr-widget-template-instance">
                         <p class="sample">Template Widget goes here</p>
