--- a/workspace.html
+++ b/workspace.html
@@ -84,18 +84,13 @@
                         <p class="sample">CurrSens goes here</p>
                     </div-->
 
-                    <div id="widget-gcode-instance">
-                        widget gcode
-                    </div>
+                    <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
 
                     
-                    <div id="com-chilipeppr-widget-template-instance">
-                        <p class="sample">Template Widget goes here</p>
-                    </div>
+                    <!--div id="com-chilipeppr-widget-template-instance"><p class="sample">Template Widget goes here</p></div-->
 
-                    <div id="com-chilipeppr-widget-spconsole-instance">
-                        Serial Port Console goes here.
-                    </div>
+                    <!--div id="com-chilipeppr-widget-console-instance">Serial Port Console goes here.</div-->
+                    <div id="com-chilipeppr-widget-console-instance" class="zhigh">Load Serial Port Console Here</div>
 
                 </div>
 
