--- a/workspace.html
+++ b/workspace.html
@@ -89,8 +89,7 @@
                     
                     <!--div id="com-chilipeppr-widget-template-instance"><p class="sample">Template Widget goes here</p></div-->
 
-                    <!--div id="com-chilipeppr-widget-console-instance">Serial Port Console goes here.</div-->
-                    <div id="com-chilipeppr-widget-console-instance" class="zhigh">Load Serial Port Console Here</div>
+                    <div id="com-chilipeppr-widget-spconsole-instance" class="zhigh">Serial Port Console goes here.</div>
 
                 </div>
 
