--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -540,7 +540,7 @@ cpdefine("inline:com-chilipeppr-workspace-d1", ["chilipeppr_ready"], function() 
                         <p class="sample">CurrSens goes here</p>
                     </div-->
 
-                    <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
+                    <div id="com-chilipeppr-gcode-list">Load Gcode List Here</div>
 
                     
                     <!--div id="com-chilipeppr-widget-template-instance"><p class="sample">Template Widget goes here</p></div-->
