Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/workspace.html
+++ b/workspace.html
@@ -84,7 +84,7 @@
                         <p class="sample">CurrSens goes here</p>
                     </div-->
 
-                    <div id="com-chilipeppr-gcode-list">Load Gcode List Here</div>
+                    <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
 
                     
                     <!--div id="com-chilipeppr-widget-template-instance"><p class="sample">Template Widget goes here</p></div-->
